# agrmt

./: .gitignore  README.md  agreement.py  pyproject.toml
agrmt/: __init__.py  agreement.py
tests/: agreement_test_cases.csv  test_agreement.py
